# project-rag-llm

./: README.md  pyproject.toml  requirements.txt  streamlit_app.py
.devcontainer/: devcontainer.json
data/: Weak Supervision.csv  weak_supervision_translate.csv
