[tool.poetry]
name = "project-llm"
version = "0.1.0"
description = ""
authors = ["Frankson Souza"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10.16"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
langchain-community = "^0.3.13"
langchain-openai = "^0.2.14"
langchain-chroma = "^0.1.4"
streamlit = "^1.41.1"
